Bug 1507433 - Avoid shape teleporting if any uncacheable prototypes. r=jandem a=jcristau

These cases are rare and uncacheable prototype shapes are tricky to get
right so simplify code instead. The impact is that accessing non-own
properties of an object that mutates its prototype will have a few more
shape / group guards than are strictly needed.

Differential Revision: https://phabricator.services.mozilla.com/D12806

--HG--
extra : source : 40e1670547263c1b86b6f58dd4f481830eecd10c